# scrappy

./: *shell*  .gitignore  LICENSE  README.MD  README.md  abstract-test.txt  cabal.project  cabal.project.local  default.nix  documentation.html  html.txt  main.tex  node-packages.nix  node2.nix  old-default.nix  package-lock.json  package.json  release.nix  result  scrappy-0.1.0.0.cabal  scrappy.cabal  shell.nix  surprise.txt  test-shell.nix  test.txt  test0.html  testTemplate.txt  testTemplate2.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: package.cache  researchPaperScraper-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-8.6.5/: package.cache  researchPaperScraper-0.1.0.0-inplace.conf
src/: A1.txt  BuildActions.hs  Concurrencies.hs  Find.hs  Lauren.hs  Links.hs  Proxies.hs  QuasiQuoterTesting.hs  QuickProjects.hs  QuickProjectss.hs  Requests.hs  RunJS.hs  Scrape.hs  Test.hs  Types.hs  UndeterminedLoc.hs  typing-test.txt
src/Elem/: ChainHTML.hs  ElemHeadParse.hs  ITextElemParser.hs  SimpleElemParser.hs  TreeElemParser.hs  Types.hs
src/Scrappy/: BuildActions.hs  Concurrencies.hs  Config.hs  Elem.hs  Find.hs  JS-FFI.hs  JS.hs  JSDOM.hs  JSFFI.hs  Links.hs  Proxies.hs  Requests.hs  Run.hs  Scrape.hs  Template.hs  Types.hs
src/Scrappy/Elem/: ChainHTML.hs  ElemHeadParse.hs  ITextElemParser.hs  SimpleElemParser.hs  TreeElemParser.hs  Types.hs
test/: MyLibTest.hs
tests/: MyLibTest.hs  ScrubPrefix.hs
text/: bugIDK.txt  bugIDK2.txt  easyHtmlGroup.html  easyHtmlGroup.txt  easySmall.html  justNav.txt  new.txt  runInBodHGroup.txt
tmp/: ace-alpha.html  ace-alpha.js  hoogle.html  index.js  test.html  test.js  test2.html
